@@ -77,4 +77,4 @@ let catch_break on =
 
 (* OCaml version string, must be in the format described in sys.mli. *)
 
-let ocaml_version = "3.06+18 (2002-11-07)";;
+let ocaml_version = "3.06+19 (2002-12-03)";;
