@@ -1,4 +1,4 @@
-        Objective Caml version 3.06
+        Objective Caml version 3.06+19 (2002-12-03)
 
 #   * * *       #   type 'a t = { t : 'a; } 
 # type 'a fold = { fold : 'b. f:('b -> 'a -> 'b) -> init:'b -> 'b; } 
@@ -118,7 +118,7 @@
 val p1 : point = <obj>
 val cp : color_point = <obj>
 val c : circle = <obj>
-val d : float = 11.4536240471
+val d : float = 11.45362404707371
 #   val f : < m : 'a. 'a -> 'a > -> < m : 'b. 'b -> 'b > = <fun>
 #   Characters 41-42:
 This expression has type < m : 'a. 'a -> 'a list > but is here used with type
