@@ -402,15 +402,9 @@ let rec rev_log accu = function
     Unchanged -> accu
   | Invalid -> assert false
   | Change (ch, next) ->
-      rev_log (ch::accu) !next
-
-let rec invalidate_after = function
-    Unchanged -> ()
-  | Invalid -> assert false
-  | Change (_, next) ->
       let d = !next in
       next := Invalid;
-      invalidate_after d
+      rev_log (ch::accu) d
 
 let backtrack changes =
   match !changes with
@@ -420,5 +414,5 @@ let backtrack changes =
       cleanup_abbrev ();
       let backlog = rev_log [] change in
       List.iter undo_change backlog;
-      invalidate_after change;
-      changes := Unchanged
+      changes := Unchanged;
+      Weak.set trail 0 (Some changes)
